# featex

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example-for-fig3.py  featex.c  featex.raw
assets/: combo.dict  featex-tran.txt
src/: CMakeLists.txt  featex.c
